--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,22 @@
 @charset "UTF-8";
 /* CSS Document */
 
-p, h1 {
+/*font-family: 'Oswald', sans-serif;
+font-family: 'Montserrat', sans-serif;*/
+
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700,300|Montserrat:400,700);
+
+h1, h2 {
 	text-align: center;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
+}
+
+p {
+	text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	line-height: 175%;
 }
 
 /* This is so the browser will know how to size the content, adjusts automatically keeps boxes within rows*/
@@ -101,6 +115,8 @@ button {
 nav {
 	position: fixed;
 	top: 0;
+	font-family: 'Oswald', sans-serif;
+	font-weight: 400;
 }
 
 li {
@@ -264,6 +280,10 @@ nav {
 
 #brew-tips {
 	display: none;
+}
+
+p {
+	line-height: 140%;
 }
 
 }
